--- a/nocss.css
+++ b/nocss.css
@@ -1,8 +1,8 @@
 /*
- * materialize RTL v1
+ * nocss v1
  * By @atechninfo
  * Github: http://github.com/atechninfo/
- * Source Code: https://github.com/atechninfo/materialize-rtl
+ * Source Code: https://github.com/atechninfo/noCSS
  */
 .-oflw {
         overflow: hidden !important;
