Update and rename nocss.css to shla.css

--- a/shla.css
+++ b/shla.css
@@ -1,8 +1,8 @@
 /*
- * nocss v1
+ * nocss v2.0
  * By @atechninfo
  * Github: http://github.com/atechninfo/
- * Source Code: https://github.com/atechninfo/noCSS
+ * Source Code: https://github.com/atechninfo/Shla
  */
  
 .-oflw {
