--- a/colors.css
+++ b/colors.css
@@ -1,8 +1,8 @@
 /*
- * nocss v1 --social-media-colors css
+ * Shla colors v2.0 
  * By @atechninfo
  * Github: http://github.com/atechninfo/
- * Source Code: https://github.com/atechninfo/noCSS
+ * Source Code: https://github.com/atechninfo/shla
  */
        .media[href*="facebook.com"], .media-hover[href*="facebook.com"]:hover {
         background-color: #1565c0 !important;
