--- a/responsive.css
+++ b/responsive.css
@@ -1,8 +1,8 @@
 /*
- * nocss v1 --responsive.css
+ * Shla v2.0 --responsive.css
  * By @atechninfo
  * Github: http://github.com/atechninfo/
- * Source Code: https://github.com/atechninfo/noCSS
+ * Source Code: https://github.com/atechninfo/Shla
  */
  .responsive {
     display: block;
