--- a/shla.css
+++ b/shla.css
@@ -1,5 +1,5 @@
 /*
- * nocss v2.0
+ * Teen v2.0
  * By @atechninfo
  * Github: http://github.com/atechninfo/
  * Source Code: https://github.com/atechninfo/Shla
